# soluto-regulatory-agents

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  langgraph.json  logging.yaml  main.py  pyproject.toml  requirements.txt  start.sh
config/: logging.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh  fix_github_auth.sh  github_setup.sh  load-test.js  quick-start.sh  status.sh  validate.py
src/: __init__.py  cli.py  graph.py
src/agents/: __init__.py  base.py  orchestrator.py  perplexity_agent.py  regulatory.py
src/api/: __init__.py  app.py  dashboard.py  langserve_app.py  models.py  monitoring.py
src/config/: __init__.py  langsmith.py  settings.py
src/memory/: __init__.py  base.py  redis_store.py  sqlite_store.py  types.py
src/services/: __init__.py  database.py  regulatory_apis.py
src/tools/: __init__.py  base.py  browser.py  compliance_tools.py  document.py  legal_tools.py  perplexity_tool.py  research_tools.py  risk_tools.py  search.py
src/utils/: __init__.py  logger.py
